--- a/MonRestoDuMonde/Base.lproj/Main.storyboard
+++ b/MonRestoDuMonde/Base.lproj/Main.storyboard
@@ -26,10 +26,10 @@
             </objects>
             <point key="canvasLocation" x="1464.8" y="-188.45577211394306"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Mon Tab Bar-->
         <scene sceneID="VfA-7C-Grn">
             <objects>
-                <tabBarController id="8FU-TS-RAU" sceneMemberID="viewController">
+                <tabBarController id="8FU-TS-RAU" customClass="MonTabBar" customModule="MonRestoDuMonde" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pzJ-dU-Irg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -44,11 +44,11 @@
             </objects>
             <point key="canvasLocation" x="-425" y="144"/>
         </scene>
-        <!--Item 1-->
+        <!--Menu-->
         <scene sceneID="m9y-Xl-Scu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eCQ-R1-4Hq" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="tdm-WG-aGJ"/>
+                    <tabBarItem key="tabBarItem" title="Menu" id="tdm-WG-aGJ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O87-39-7V8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -92,11 +92,11 @@
             </objects>
             <point key="canvasLocation" x="1464.8" y="506.89655172413796"/>
         </scene>
-        <!--Item-->
+        <!--A la carte-->
         <scene sceneID="yW0-DL-wqQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EOd-t3-CiI" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ibT-Cr-tyx"/>
+                    <tabBarItem key="tabBarItem" title="A la carte" id="ibT-Cr-tyx"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V8h-ZB-uvE">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
